[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sandbox/GravitySandbox.gd" type="Script" id=1]
[ext_resource path="res://UI/Menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Menu.gd" type="Script" id=3]
[ext_resource path="res://fonts/Roboto-Thin.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/Roboto-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://UI/FirstMenu.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 32
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 32
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 32
use_filter = true
font_data = ExtResource( 5 )

[node name="GravitySandbox" type="Node"]
script = ExtResource( 1 )

[node name="Trajectories" type="Node" parent="."]

[node name="Planets" type="Node" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 2, 2 )
process_mode = 0

[node name="FollowCamera" type="Camera2D" parent="."]
zoom = Vector2( 2, 2 )

[node name="Setters" type="CanvasLayer" parent="."]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Ready" type="Button" parent="HUD"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -129.0
margin_top = -62.0
margin_right = 129.0
margin_bottom = -18.0
custom_fonts/font = SubResource( 1 )
disabled = true
button_mask = 3
text = "Start Simulation!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveMessage" type="Label" parent="HUD"]
visible = false
anchor_right = 1.0
margin_top = 202.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 2 )
text = "File Saved"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -7.0
margin_right = 110.0
margin_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "Right Click to add a Celestial Body"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" parent="." instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="Principal" parent="Menu" index="0"]
visible = false

[node name="CameraOptions" parent="Menu/Principal" index="2"]
disabled = true

[node name="Restart" parent="Menu/Principal" index="3"]
text = "Back to Main Menu"

[node name="ResetTrajectories" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
one_shot = true

[node name="MovingCamera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )
process_mode = 0

[node name="StartDrawing" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
one_shot = true

[node name="NewPrediction" type="Timer" parent="."]
process_mode = 0

[node name="StartMenu" type="CanvasLayer" parent="."]

[node name="Mesagge" type="Label" parent="StartMenu"]
visible = false
margin_top = 217.318
margin_right = 1280.0
margin_bottom = 255.318
custom_fonts/font = SubResource( 2 )
text = "Feature in process."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FirstMenu" parent="StartMenu" instance=ExtResource( 6 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="VBoxContainer" parent="StartMenu/FirstMenu" index="0"]
margin_right = 1280.0
margin_bottom = 720.0

[node name="Title" parent="StartMenu/FirstMenu/VBoxContainer" index="0"]
margin_top = 82.0
margin_right = 1280.0
margin_bottom = 237.0

[node name="VBoxContainer" parent="StartMenu/FirstMenu/VBoxContainer" index="1"]
margin_top = 287.0
margin_right = 1280.0
margin_bottom = 523.0

[node name="NewSystem" parent="StartMenu/FirstMenu/VBoxContainer/VBoxContainer" index="0"]
margin_right = 1280.0

[node name="Load" parent="StartMenu/FirstMenu/VBoxContainer/VBoxContainer" index="1"]
margin_right = 1280.0

[node name="Options" parent="StartMenu/FirstMenu/VBoxContainer/VBoxContainer" index="2"]
margin_right = 1280.0

[node name="About" parent="StartMenu/FirstMenu/VBoxContainer/VBoxContainer" index="3"]
margin_right = 1280.0

[node name="Exit" parent="StartMenu/FirstMenu/VBoxContainer/VBoxContainer" index="4"]
margin_right = 1280.0

[node name="Version" parent="StartMenu/FirstMenu/VBoxContainer" index="2"]
margin_top = 573.0
margin_right = 1280.0
margin_bottom = 638.0

[node name="LoadMenu" type="PopupMenu" parent="StartMenu"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 3 )
items = [ "System1", null, 0, false, false, 0, 0, null, "", false, "System2", null, 0, false, false, 1, 0, null, "", false, "System3", null, 0, false, false, 2, 0, null, "", false, "System4", null, 0, false, false, 3, 0, null, "", false, "System5", null, 0, false, false, 4, 0, null, "", false, "System6", null, 0, false, false, 5, 0, null, "", false, "System7", null, 0, false, false, 6, 0, null, "", false, "System8", null, 0, false, false, 7, 0, null, "", false, "System9", null, 0, false, false, 8, 0, null, "", false, "System10", null, 0, false, false, 9, 0, null, "", false ]

[node name="SaveMenu" type="PopupMenu" parent="StartMenu"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 4 )
items = [ "System1", null, 0, false, false, 0, 0, null, "", false, "System2", null, 0, false, false, 1, 0, null, "", false, "System3", null, 0, false, false, 2, 0, null, "", false, "System4", null, 0, false, false, 3, 0, null, "", false, "System5", null, 0, false, false, 4, 0, null, "", false, "System6", null, 0, false, false, 5, 0, null, "", false, "System7", null, 0, false, false, 6, 0, null, "", false, "System8", null, 0, false, false, 7, 0, null, "", false, "System9", null, 0, false, false, 8, 0, null, "", false, "System10", null, 0, false, false, 9, 0, null, "", false ]
[connection signal="pressed" from="HUD/Ready" to="." method="_on_Ready_pressed"]
[connection signal="pressed" from="Menu/Principal/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Menu/Principal/Save" to="." method="_on_Save_pressed"]
[connection signal="item_selected" from="Menu/Principal/CameraOptions" to="." method="_on_CameraOptions_item_selected"]
[connection signal="pressed" from="Menu/Principal/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Menu/Principal/Exit" to="." method="_on_Exit_pressed"]
[connection signal="timeout" from="ResetTrajectories" to="." method="_on_ResetTrajectories_timeout"]
[connection signal="timeout" from="StartDrawing" to="." method="_on_StartDrawing_timeout"]
[connection signal="timeout" from="NewPrediction" to="." method="_on_NewPrediction_timeout"]
[connection signal="pressed" from="StartMenu/FirstMenu/VBoxContainer/VBoxContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="StartMenu/FirstMenu/VBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="index_pressed" from="StartMenu/LoadMenu" to="." method="_on_LoadMenu_index_pressed"]
[connection signal="index_pressed" from="StartMenu/SaveMenu" to="." method="_on_SaveMenu_index_pressed"]

[editable path="Menu"]

[editable path="StartMenu/FirstMenu"]
